Added the ability to add 3rd party package repositories

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,3 +12,12 @@ ENABLE_SRC_REPOS: False
 REBOOT: True
 REBOOT_TIMEOUT: 120
 EXTRA_PACKAGES: []
+SETUP_THIRD_PARTY_REPOS: False
+THIRD_PARTY_REPOS_KEYS:
+  - ""
+THIRD_PARTY_REPOS:
+  - NAME: ""
+    SCHEME: ""
+    URI: ""
+    RELEASE: ""
+    REPOS: ""
