--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -47,6 +47,20 @@
     dest: /etc/apt/sources.list
   when: ansible_os_family == 'Debian'
 
+- name: Setup 3rd Party Package Repositories (Debian/Ubuntu)
+  template:
+    src: templates/3rd_party.list.j2
+    dest: /etc/apt/sources.list.d/{{ item.NAME }}.list
+  with_items: "{{ THIRD_PARTY_REPOS }}"
+  when: (SETUP_3RD_PARTY_REPOS) and (ansible_os_family == 'Debian')
+
+- name: Add 3rd Party Repository Keys
+  apt_key:
+    url: "{{ item }}"
+    state: present
+  with_items: "{{ THIRD_PARTY_REPOS_KEYS }}"
+  when: (SETUP_3RD_PARTY_REPOS) and (ansible_os_family == 'Debian')
+
 - name: Install Updates (Debian/Ubuntu)
   apt:
     upgrade: dist
@@ -62,7 +76,7 @@
     - "{{ exim_packages }}"
   when: ansible_os_family == 'Debian'
 
-- name: Install Basic Tools
+- name: Install Packages
   apt:
     pkg: "{{ item }}"
     state: present
