--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,9 +9,11 @@ galaxy_info:
     versions:
       - jessie
       - stretch
+      - buster
   - name: Ubuntu
     versions:
       - trusty
       - xenial
+      - bionic
   galaxy_tags:
     - server
