Added task to change system timezone

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 # defaults file for Ansible-LinuxCommon
 CHANGE_HOSTNAME: False
+CHANGE_TIMEZONE: False
+TIMEZONE: ""
 SETUP_SUDO: False
 DEBIAN_MIRROR: "ftp.debian.org"
 DEBIAN_SECURITY_MIRROR: "security.debian.org"
