--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,10 @@ SET_LOCALES: False
 LOCALES: []
 DEFAULT_LOCALE: ""
 SETUP_SUDO: False
+MODIFY_SYSTEM_SHELL_ENV: False
+MODIFY_SKEL: False
+MODIFY_ROOT_SHELL_ENV: False
+MODIFY_USER_SHELL_ENV: False
 DEBIAN_MIRROR: "ftp.debian.org"
 DEBIAN_SECURITY_MIRROR: "security.debian.org"
 UBUNTU_MIRROR: "archive.ubuntu.com"
