Added condition for modifying CloudInit parameters

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 # defaults file for Ansible-LinuxCommon
 CHANGE_HOSTNAME: False
+SETUP_AWS: False
 CHANGE_TIMEZONE: False
 TIMEZONE: ""
 SET_LOCALES: False
