Install packages only if INSTALL_PACKAGES is True

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ MODIFY_SYSTEM_SHELL_ENV: False
 MODIFY_SKEL: False
 MODIFY_ROOT_SHELL_ENV: False
 MODIFY_USER_SHELL_ENV: False
+INSTALL_PACKAGES: False
 DEBIAN_MIRROR: "ftp.debian.org"
 DEBIAN_SECURITY_MIRROR: "security.debian.org"
 UBUNTU_MIRROR: "archive.ubuntu.com"
