Multiple major changes. * Appended LC_ to all variables and updated README.md accordingly. * Rearranged files and templates. * Modified when conditions.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,35 +1,35 @@
 ---
 # defaults file for Ansible-LinuxCommon
-CHANGE_HOSTNAME: False
-SETUP_AWS: False
-CHANGE_TIMEZONE: False
-TIMEZONE: ""
-SET_LOCALES: False
-LOCALES: []
-DEFAULT_LOCALE: ""
-SETUP_SUDO: False
-MODIFY_SYSTEM_SHELL_ENV: False
-MODIFY_SKEL: False
-MODIFY_ROOT_SHELL_ENV: False
-MODIFY_USER_SHELL_ENV: False
-INSTALL_PACKAGES: False
-DEBIAN_MIRROR: "ftp.debian.org"
-DEBIAN_SECURITY_MIRROR: "security.debian.org"
-UBUNTU_MIRROR: "archive.ubuntu.com"
-UBUNTU_CANONICAL_PARTNER_MIRROR: "archive.canonical.com"
-DEBIAN_REPOS: "main contrib non-free"
-UBUNTU_REPOS: "main restricted universe multiverse"
-ENABLE_SRC_REPOS: False
-REBOOT: False
-REBOOT_TIMEOUT: 120
-EXTRA_PACKAGES: []
-SETUP_THIRD_PARTY_REPOS: False
-THIRD_PARTY_REPOS_KEYS:
+LC_CHANGE_HOSTNAME: False
+LC_SETUP_CLOUD_INIT: False
+LC_CHANGE_TIMEZONE: False
+LC_TIMEZONE: ""
+LC_SET_LOCALES: False
+LC_LOCALES: []
+LC_DEFAULT_LOCALE: ""
+LC_SETUP_SUDO: False
+LC_MODIFY_SYSTEM_SHELL_ENV: False
+LC_MODIFY_SKEL: False
+LC_MODIFY_ROOT_SHELL_ENV: False
+LC_MODIFY_USER_SHELL_ENV: False
+LC_INSTALL_PACKAGES: False
+LC_DEBIAN_MIRROR: "ftp.debian.org"
+LC_DEBIAN_SECURITY_MIRROR: "security.debian.org"
+LC_UBUNTU_MIRROR: "archive.ubuntu.com"
+LC_UBUNTU_CANONICAL_PARTNER_MIRROR: "archive.canonical.com"
+LC_DEBIAN_REPOS: "main contrib non-free"
+LC_UBUNTU_REPOS: "main restricted universe multiverse"
+LC_ENABLE_SRC_REPOS: False
+LC_REBOOT: False
+LC_REBOOT_TIMEOUT: 120
+LC_EXTRA_PACKAGES: []
+LC_SETUP_THIRD_PARTY_REPOS: False
+LC_THIRD_PARTY_REPOS_KEYS:
   - ""
-THIRD_PARTY_REPOS:
+LC_THIRD_PARTY_REPOS:
   - NAME: ""
     SCHEME: ""
     URI: ""
     RELEASE: ""
     REPOS: ""
-SSH_PORT: 22
+LC_SSH_PORT: 22
