--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,7 +25,7 @@
 
 - name: Change System Timezone
   timezone:
-    name: "{{ TIMEZONE }}"
+    name: "{{ LC_TIMEZONE }}"
   when: LC_CHANGE_TIMEZONE
 
 - name: Ensure locales Package is Installed
