Added ansible local python interpreter path to the reboot task

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,3 +35,4 @@ LC_THIRD_PARTY_REPOS:
 LC_SSH_PORT: 22
 LC_SET_KERNEL_PARAMETERS: False
 LC_KERNEL_PARAMETERS: []
+LC_LOCAL_PYTHON_INTERPRETER: "/usr/bin/python"
