Conditionally overwrite the default sources.list file and conditional backports

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,8 @@ LC_SET_LOCALES: False
 LC_LOCALES: []
 LC_DEFAULT_LOCALE: ""
 LC_SETUP_SUDO: False
+LC_CHANGES_APT_DEFAULT_SOURCES_LIST: True
+LC_ENABLE_APT_BACKPORTS: False
 LC_MODIFY_SYSTEM_SHELL_ENV: False
 LC_MODIFY_SKEL: False
 LC_MODIFY_ROOT_SHELL_ENV: False
