--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,8 @@ LC_TIMEZONE: ""
 LC_SET_LOCALES: False
 LC_LOCALES: []
 LC_DEFAULT_LOCALE: ""
+LC_SET_DEBCONF_VALUES: False
+LC_DEBCONF_VALUES: []
 LC_SETUP_SUDO: False
 LC_CHANGES_APT_DEFAULT_SOURCES_LIST: True
 LC_ENABLE_APT_BACKPORTS: False
