Added task to conditionally preserve /etc/apt/sources.list via cloud-init

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,6 +23,12 @@
     dest: "/etc/cloud/cloud.cfg.d/99_manage_etc_hosts.cfg"
   when: LC_CLOUD_INIT_PRESERVE_HOSTNAME
 
+- name: Modify Cloud-Init Configuration to not Manage /etc/apt/sources.list
+  copy:
+    src: "files/etc/cloud/cloud.cfg.d/99_manage_etc_hosts.cfg"
+    dest: "/etc/cloud/cloud.cfg.d/99_manage_etc_hosts.cfg"
+  when: LC_CLOUD_INIT_PRESERVE_SOURCES_LIST
+
 - name: Change System Timezone
   timezone:
     name: "{{ LC_TIMEZONE }}"
