--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 # defaults file for Ansible-LinuxCommon
 LC_CHANGE_HOSTNAME: False
 LC_CLOUD_INIT_PRESERVE_HOSTNAME: False
+LC_CLOUD_INIT_PRESERVE_SOURCES_LIST: False
 LC_CHANGE_TIMEZONE: False
 LC_TIMEZONE: ""
 LC_SET_LOCALES: False
